change container max-width, add margin to delete button , remove buttons container border

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- List of tasks -->
-    <div class="card mb-4">
+    <div class="card mb-4 border-0">
         <ul id="tasksList" class="list-group list-group-flush">
 
 <!--            <li id="emptyList" class="list-group-item empty-list">-->
